
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct udp_target {scalar_t__ state; } ;
struct tl_peer {int PID; } ;


 int tl_store_init_raw_msg (struct udp_target*,long long) ;
 scalar_t__ udp_failed ;
 struct udp_target* udp_target_lookup (int *) ;

int peer_udp_init_store (struct tl_peer *self, long long qid) {
  struct udp_target *S = udp_target_lookup (&self->PID);
  if (!S || S->state == udp_failed) {
    return -1;
  }
  tl_store_init_raw_msg (S, qid);
  return 0;
}
